# jimp2

./: .gitignore  forwardList.cpp  lab2_cw2_Array.cpp  lab2_cw3_Polybius.cpp  lab4cw0.cpp  lab4cw1and2.cpp
Matrix/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h
OpenGL3DCube/: CMakeLists.txt  main.cpp
OpenGL3DCube/include/: IndexBuffer.h  Matrix.h  Model.h  Renderer.h  Shader.h  VertexArray.h  VertexBuffer.h
OpenGL3DCube/shaders/: DefFragment.shader  DefVertex.shader
OpenGL3DCube/src/: IndexBuffer.cpp  Matrix.cpp  Model.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp
gotowe/: Animal.h  CMakeLists.txt  TaxReturn.h  main.cpp
lab1/: lab1_palindrom.cpp  lab1_potega.cpp  lab1_reverse.cpp  lab1_silnia.cpp
lab11/: cw2_adding.cpp  cw4_repository.cpp
lab2/: lab2_cw2_Array.cpp  lab2_cw3_Polybius.cpp  lab2_forwardList.cpp
lab3/: lab3cw2_HH_MM.cpp
lab4/: lab4cw0.cpp  lab4cw1and2.cpp  lab4cw4.cpp
lab5/: lab5_cw4.cpp  lab5_cw5_Marsjanie.cpp
lab5/Matrix/: main.cpp  matrix.cpp  matrix.h
lab6/: lab6_cw2.cpp  lab6_zad1.cpp
lab7/: cw_Iteratory.cpp  kulakolo.cpp
lab8/ZadanieDomowe/: CMakeLists.txt  main.cpp
lab8/cw2/: main.cpp
lab8/cw3/: CMakeLists.txt  main.cpp
lab9/cw2/: CMakeLists.txt  main.cpp
lab9/serializer/: main.cpp  (+1 more)
matrixcalc/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrix.cpp  matrix.h  matrixcalc.pro  matrixcalc.pro.user.7207516
tax/: CMakeLists.txt  Tax36.cpp  Tax36.h  Tax37.cpp  Tax37.h  main.cpp
vektor/: CMakeLists.txt  InvalidIndexException.cpp  InvalidIndexExpception.h  Vector.cpp  Vector.h  main.cpp
(+2 files in other folders)
